--- a/docker-compose/testenv.yml
+++ b/docker-compose/testenv.yml
@@ -1,14 +1,39 @@
 ---
-version: '2'
+version: '2.2'
 services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.7.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    #volumes:
+    #  - esdata1:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 9300:9300
+    networks:
+      - esnet
+
   zookeeper:
     image: confluentinc/cp-zookeeper:5.0.1
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
+    networks:
+      - esnet
+
   kafka:
     image: confluentinc/cp-kafka:5.0.1
+    container_name: kafka
     depends_on:
       - zookeeper
     ports:
@@ -20,4 +45,13 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - esnet
 
+# persistence
+#volumes:
+#  esdata1:
+#    driver: local
+
+networks:
+  esnet:
