--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,32 @@
 confluent-kafka==0.11.6
 elasticsearch==6.3.1
 urllib3==1.24.1
+certifi==2019.3.9
+cffi==1.12.2
+chardet==3.0.4
+Click==7.0
+confluent-kafka==0.11.6
+cryptography==2.6.1
+docker==2.7.0
+docker-pycreds==0.4.0
+elasticsearch==6.3.1
+filelock==3.0.10
+idna==2.8
+packaging==19.0
+pip-tools==3.5.0
+pipdeptree==0.13.2
+pluggy==0.9.0
+py==1.8.0
+pycparser==2.19
+PyHamcrest==1.9.0
+pyOpenSSL==19.0.0
+pyparsing==2.3.1
+PySocks==1.6.8
+requests==2.21.0
+six==1.12.0
+toml==0.10.0
+tox==3.8.3
+tox-docker==1.2.0
+urllib3==1.24.1
+virtualenv==16.4.3
+websocket-client==0.55.0
