--- a/docker-compose/Dockerfile-pytest
+++ b/docker-compose/Dockerfile-pytest
@@ -1,4 +1,4 @@
-FROM python:alpine3.7
+FROM python:3.7-alpine
 ARG LIB_RD_KAFKA_VERSION=1.0.0
 
 RUN apk update && apk upgrade && apk add bash build-base sudo
@@ -6,9 +6,9 @@ RUN cd /tmp; wget https://github.com/edenhill/librdkafka/archive/v${LIB_RD_KAFKA
   tar xf librdkafka.tar.gz --strip-components=1 && \
   ./configure --prefix /usr && make && make install
 
-WORKDIR /app
-COPY ./ /app
 RUN pip install pip-tools
-RUN pip-sync
 RUN pip install -U --pre pybuilder
+
+WORKDIR /app
+RUN apk add libffi-dev openssl-dev
 
