--- a/docker-compose/unittest.yml
+++ b/docker-compose/unittest.yml
@@ -9,7 +9,8 @@ services:
       args:
         LIB_RD_KAFKA_VERSION: 1.0.0
     container_name: pytest
-    command: pyb install_dependencies run_unit_tests
+    # command: pyb install_dependencies run_unit_tests
+    command: pyb run_unit_tests
     volumes:
       - ../:/app
     networks:
